WebCore/page/gtk/DragControllerGtk.cpp
@@ -63,4 +63,8 @@ const IntSize& DragController::maxDragImageSize()
     return maxDragImageSize;
 }
 
+void DragController::cleanupAfterSystemDrag()
+{
+}
+
 }
