WebCore/page/win/DragControllerWin.cpp
@@ -61,4 +61,8 @@ const IntSize& DragController::maxDragImageSize()
     return maxDragImageSize;
 }
 
+void DragController::cleanupAfterSystemDrag()
+{
+}
+
 }
