WebCore/page/wx/DragControllerWx.cpp
@@ -65,4 +65,8 @@ const IntSize& DragController::maxDragImageSize()
     return maxDragImageSize;
 }
 
+void DragController::cleanupAfterSystemDrag()
+{
+}
+
 }
