third_party/WebKit/WebCore/page/qt/DragControllerQt.cpp
@@ -66,4 +66,8 @@ const IntSize& DragController::maxDragImageSize()
     return maxDragImageSize;
 }
 
+void DragController::cleanupAfterSystemDrag()
+{
+}
+
 }
